fixed jump???

--- a/style.css
+++ b/style.css
@@ -86,18 +86,19 @@ nav ul li {
         margin-bottom: 40px;
         font-size: 4em;
         background-color: rgba(0, 0, 0, 0.7);
+        transition: all 0.5s ease-in-out;
     }
     nav ul li {
         display: block;
-        opacity: 0;
-        height: 0px;
-        transition: all 0.3 ease-in-out;
+        max-height: 0;
         padding-bottom: 0;
         padding-top: 0;
+        opacity: 0;
+        transition: all 0.3s ease-in-out;
     }
     nav ul li.show {
         opacity: 1;
-        height: auto;
+        max-height: 10em;
         padding-bottom: 20px;
         padding-top: 20px;
     }
